--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
-name = "fn-error-context"
+name = "fn-wrap-err"
 description = "An attribute macro to add context to errors from a function."
 version = "0.2.1"
 authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
-repository = "https://github.com/andrewhickman/fn-error-context"
-documentation = "https://docs.rs/fn-error-context"
+repository = "https://github.com/andrewhickman/fn-wrap-err"
+documentation = "https://docs.rs/fn-wrap-err"
 license = "MIT/Apache-2.0"
 readme = "README.md"
 edition = "2018"
 autotests = false
 
 [lib]
-name = "fn_error_context"
+name = "fn_wrap_err"
 proc-macro = true
 
 [[test]]
